# mechint-demo

./: README.md  llm_runner.py  pyproject.toml
notebooks/: usage.ipynb
tests/: test_llm_runner.py
