[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mechint-demo"
version = "0.1.0"
description = "Utility functions for downloading and running small language models."
readme = "README.md"
authors = [{name = "Simone Scardapane"}]
requires-python = ">=3.8"
dependencies = [
    "torch",
    "transformers",
    "accelerate",
]

[tool.setuptools]
py-modules = ["llm_runner"]

[project.optional-dependencies]
sae = ["sae-lens"]
