[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mechint-demo"
version = "0.1.0"
description = "Utility functions for downloading and running small language models."
readme = "README.md"
authors = [{name = "Simone Scardapane"}]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "accelerate>=0.30",
    "numpy>=1.26,<2.0",
    "fsspec>=2023.9.2",
    "httpx>=0.28.1",
    "zstandard>=0.23.0",
]

[tool.setuptools]
py-modules = ["llm_runner"]

[project.optional-dependencies]
sae = ["sae-lens>=6.5.1"]
